# Aetherscope-AFM-AGNT-PLUGIN

./: README.md  aetherscope.js  bundle-manifest.json  file-analyze.js  file-compress.js  file-copy.js  file-create.js  file-delete.js  file-explorer.js  file-extract.js  file-move.js  file-search.js  file_tools.js  index.js  manifest.json  open_url_tool.js  package.json  pyproject.toml  test_package.py
src/aetherscope_afm/: __init__.py  cli.py  config.py  field.py  io.py  ledger.py  metrics.py  open_url_tool.py  preprocess.py  schemas.py  transforms.py  visualize.py
src/aetherscope_afm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: smoke.test.js  test_aetherscope_smoke.py  test_smoke_minimal.js  test_smoke_minimal.py
