[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherscope-afm"
version = "1.0.0"
description = "AFM-derived volumetric field processing and Omega-basin analysis toolkit."
requires-python = ">=3.9"
authors = [ { name = "James Paul Jackson" } ]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24,<2.0",
    "matplotlib>=3.7,<4.0",
    "PyYAML>=6.0,<7.0",
    "pydantic>=2.7,<3.0",
    "typer>=0.12,<0.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aetherscope-afm = "aetherscope_afm.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]